--- a/src/app/Auth/home/home.component.html
+++ b/src/app/Auth/home/home.component.html
@@ -157,11 +157,12 @@
     <span class="text-danger">{{login_Data_respons?.msg}}</span>
   </div>
   <div class="form-check form-group form_check_cus">
-    <div class="checkBoxDiv">
+    
+    <!-- <div class="checkBoxDiv">
     
     <input type="checkbox" class="form-check-input mt-3" id="exampleCheck1" (change)="KeepmeLog($event)">
     <label class="form-check-label mt-3" for="exampleCheck1">Keep me logged in</label>
-    </div>
+    </div> -->
     <div class="forgetPassDiv">
     <!-- <a (click)="showForgetPassForm()">Forgot password?</a>  -->
     </div>
