--- a/src/app/user/pages/privacypolicy/privacypolicy.component.html
+++ b/src/app/user/pages/privacypolicy/privacypolicy.component.html
@@ -67,6 +67,11 @@
   
   <p>We provide Astro numerical matchmaking services to help you find your ideal partner. There is no guarantee that it will lead to a successful marriage or compatibility. We recommend consulting professional astrologers for personalized advice.</p>
 
+  <h3>Deactivating Instructions</h3>
+  <p>Deactivating your accounts will delete your data.</p>
+  <p>To deactivate please write to us at info@mysoulmate.co.in</p>
+  
+
 </div>
 
 		
