Accessibility error fixed(design) dob show same for all country

--- a/src/app/user/pages/user_dashboard/user_dashboard.component.html
+++ b/src/app/user/pages/user_dashboard/user_dashboard.component.html
@@ -35,8 +35,10 @@
 	  <div class="centerChak rashiChart_padd">
 		  <div>
 			  <p><strong>{{this.user_basic_info_New?.u_name}}</strong></p>
-			  <p>{{this.user_basic_info_New?.dob | date:'mediumDate'}}</p>
-			  <p>{{this.user_basic_info_New?.dob | date:"shortTime"}}</p>
+			  <p>{{this.user_basic_info_New?.dob_date}}</p>
+			  <p>{{this.user_basic_info_New?.dob_time}}</p>
+			  <!-- <p>{{this.user_basic_info_New?.dob | date:'mediumDate'}}</p>
+			  <p>{{this.user_basic_info_New?.dob | date:"shortTime"}}</p> -->
 			  <p>{{userBirthLocation?.location_name}}</p>
 		  </div>
 	  </div>
