--- a/src/app/Auth/home/home.component.html
+++ b/src/app/Auth/home/home.component.html
@@ -36,8 +36,8 @@
       
       <!-- <ng-container *ngIf="!this.platform.ANDROID || !this.platform.IOS">Plain isBrowser</ng-container> -->
    
-    <h1><span>Find Some One Here</span>
-      <strong>Who Understands You  Best</strong></h1>
+    <h1><span>Find someone here</span>
+      <strong>Who understands you The Best</strong></h1>
 <ng-container *ngIf="responsiveShowRegistra">
   <div class="headerForm" [formGroup]="form_user_phone_send">
 
