--- a/www/assets/css/res_App.css
+++ b/www/assets/css/res_App.css
@@ -1,8 +1,8 @@
-@media only screen and (max-width:1024px) {
+@media only screen and (max-width:2796px) {
 
   .title_sec_main h2 {font-size: 18px;}
 
-.innerDefaultPage h3 {font-size: 16px;}
+.innerDefaultPage h3 {font-size: 15px;}
 .innerDefaultPage p {font-size: 15px;}
 
   .regestra_dob_time{font-size: 13px;
@@ -67,7 +67,7 @@
     /* .topNavSecResponsiv{display: none;} */
     .portfolio_form_fill_Top{box-shadow:none;}
 
-  .footer_bottomSec a{color: #5377d8; font-size: 14px; flex: content;}
+  .footer_bottomSec a{color: #5377d8; font-size: 15px; flex: content;}
   .footer_bottomSec a i{font-size: 28px;}
   .footer_bottomSec a span{width: 100%; display: block; line-height: 13px;}
 
@@ -86,7 +86,7 @@
 
     .loaderLogoApp p{color: #ccc;
       font-family: 'Cabin', sans-serif;
-      font-size: 14px;
+      font-size: 15px;
       text-align: center;
       margin-bottom: 6px;
     line-height: 14px;}
@@ -137,14 +137,14 @@
 
   .alreadyMember {
     margin: 15px 0 0; text-align: center; padding: 0 15px; font-family: 'Cabin', sans-serif;
-    display: inline-block; width: 100%; font-size: 14px; color: #717f9b; 
+    display: inline-block; width: 100%; font-size: 15px; color: #333333; 
   }
 
   .alreadyMember a{
     background: none;
     border-radius: 6px;
     padding: 0;
-    color: #f5133b !important; font-size: 14px !important; font-weight: 700;
+    color: #f5133b !important; font-size: 15px !important; font-weight: 700;
     text-decoration: underline;
   }
 
@@ -152,14 +152,14 @@
 
   .homeBotLink {display: block;
     margin: 15px 0 0; text-align: center; padding: 0 15px; font-family: 'Cabin', sans-serif;
-    display: inline-block; width: 100%; font-size: 16px; color: #717f9b; 
+    display: inline-block; width: 100%; font-size: 15px; color: #333333; 
   }
 
   .homeBotLink a{
     background: none;
     border-radius: 6px; margin: 0 5px;
     padding: 0;
-    color: #717f9b !important; font-size: 14px !important; font-weight: normal;
+    color: #333333 !important; font-size: 15px !important; font-weight: normal;
     text-decoration: underline;
   }
 
@@ -198,8 +198,8 @@
   .mat-horizontal-stepper-header-container{display: none !important;}
   
   
-  .portfolio_left_sub{border-radius:0 0 30px 30px; box-shadow: #b6b7b9 0px 0px 3px 1px;  margin: 0 0 15px 0; position: fixed; padding:20px 20px 25px 20px; z-index: 9;}
-  .innerMain_wraper{padding-top: 155px; padding-bottom: 115px;}
+  .portfolio_left_sub{border-radius:0 0 30px 30px; box-shadow: #b6b7b9 0px 0px 3px 1px;  margin: 0 0 15px 0; position: fixed; padding:10px 20px 25px 20px; z-index: 9;}
+  .innerMain_wraper{padding-top: 180px; padding-bottom: 115px;}
   .rightPhoto_res{margin-bottom: 0;}
 
   .personal_sumary_row{display: block;}
@@ -234,15 +234,15 @@
     border: none;
     width: 100%;}
 
-  .hambergarMenu_left h3{color: #0d2048; font-size: 16px; font-weight: 700; text-align: center; margin-top: 7px;}
-  .hambergarMenu_left h3 span{display: block; font-size: 13px; margin-top: 3px;}
+  .hambergarMenu_left h3{color: #0d2048; font-size: 15px; font-weight: 700; text-align: center; margin-top: 7px;}
+  .hambergarMenu_left h3 span{display: block; font-size: 15px; margin-top: 3px;}
 
   .slideMenuResponsive .portfolio_left_sub_nav ul{margin-top: 15px;}
 
   .slideMenuResponsive .portfolio_left_sub_nav ul .viewPro_link{
       margin: 0 0 15px 0;
-      padding:6px 12px;
-      font-size: 13px;
+      padding:6px 6px;
+      font-size: 15px;
       border-radius: 22px;
       border: #ff7c0b solid 1px;
       background: #ff7c0b;
@@ -312,8 +312,8 @@
  ul.res_upgrade_btn li{float: left;}
  
  ul.res_upgrade_btn li button{margin: 0;
-  padding: 4px 12px;
-  font-size: 13px;
+  padding: 4px 6px;
+  font-size: 14px;
   border-radius: 22px;
   border: #ff7c0b solid 1px;
   background: none;
@@ -321,7 +321,7 @@
 
  ul.res_upgrade_btn li button.verifiId_res{margin: 0;
   padding: 7px 12px;
-  font-size: 16px;
+  font-size: 15px;
   border-radius: 22px;
   border: none;
   background: linear-gradient(90deg, rgba(37,105,218,1) 0%, rgba(36,177,184,1) 100%);
@@ -332,7 +332,7 @@
   width: 80%;
   right: 10%;}
 
-  .portfolio_left_sub_nav ul li a{font-size: 16px;}
+  .portfolio_left_sub_nav ul li a{font-size: 15px;}
 
  ul.res_upgrade_btn li:first-child{margin-right: 10px;}
 
@@ -348,12 +348,12 @@
  .personal_sumary_right h3 span{font-size: 15px; line-height: 18px;}
  .personal_sumary_right p{font-size: 15px;}
 
- .personal_sumary_right h3 a{padding: 6px 24px; line-height: 16px; font-size: 14px;}
+ .personal_sumary_right h3 a{padding: 6px 24px; line-height: 16px; font-size: 15px;}
  .personal_sumary, .portfolio_details_block{box-shadow: 0 0 5px 1px #cecece;}
  .portfolio_details_block .title_sec {margin-bottom: 5px;}
  .portfolio_details_block .title_sec h2 {font-size: 18px;}
- .portfolio_details_block .title_sec h2 button{padding: 6px 18px; line-height: 16px; font-size: 14px;}
- .portfolio_edit_Form_btn button{font-size: 14px; padding: 4px 30px; line-height: 23px;}
+ .portfolio_details_block .title_sec h2 button{padding: 6px 18px; line-height: 16px; font-size: 15px;}
+ .portfolio_edit_Form_btn button{font-size: 15px; padding: 4px 30px; line-height: 23px;}
  .popupAnimated_Edite p{font-size: 15px; line-height: 24px;}
  .popupAnimated_Edite p img{max-width: 30px;}
  .inner_wraper_sub_popup_sub{padding: 20px 20px 20px 20px;}
@@ -364,19 +364,19 @@
 .portfolio_slide .imgSec img{max-width: 45px; width: 100%;}
 .portfolio_slide{padding: 15px 15px;}
 .portfolio_slide .content_right h2 {font-size: 15px;}
-.portfolio_slide .content_right a {font-size: 14px; padding: 5px 24px;}
+.portfolio_slide .content_right a {font-size: 15px; padding: 5px 24px;}
 
 .portfolio_form_fill .title_sec{margin-bottom: 14px;}
-.portfolio_form_fill .title_sec h2{font-size: 16px;}
+.portfolio_form_fill .title_sec h2{font-size: 15px;}
 .portfolio_form_fill .title_sec h2 img{max-width: 25px; margin-right: 9px;}
 
 
-.paymentListMain .current_package .current_package_sub h2{font-size: 16px; margin-bottom: 0px;}
-.paymentListMain .current_package_sub ul li{font-size: 14px;}
-.paymentListMain .paymentHistory h2{font-size: 16px; margin-bottom: 8px; }
+.paymentListMain .current_package .current_package_sub h2{font-size: 15px; margin-bottom: 0px;}
+.paymentListMain .current_package_sub ul li{font-size: 15px;}
+.paymentListMain .paymentHistory h2{font-size: 15px; margin-bottom: 8px; }
 
-.table td, .table th{padding:5px 3px; font-size: 14px;}
-.paymentListMain .paymentHistory button.downloadBtn{padding: 4px 13px; line-height: 17px; font-size: 13px; display: inline-block;}
+.table td, .table th{padding:5px 3px; font-size: 15px;}
+.paymentListMain .paymentHistory button.downloadBtn{padding: 4px 6px; line-height: 17px; font-size: 15px; display: inline-block;}
 
 .paymentHistory table{margin-bottom:0;}
 
@@ -460,7 +460,7 @@
 .astro_popup_sec h3.rightPercan{font-size: 15px;}
 .profile_match_percentage p{font-size: 12px;}
 .profile_match_percentage {max-width: 150px;}
-.astro_popup_sec h3.rightPercan span{padding: 0px 4px; font-size: 13px;}
+.astro_popup_sec h3.rightPercan span{padding: 0px 4px; font-size: 15px;}
 
 .paymentdetailsForm .col-sm-4, .paymentdetailsForm .col-sm-3, .paymentdetailsForm .col-sm-12{margin-bottom: 15px;}
 .paymentDetail_row{margin-bottom: 0;}
@@ -469,15 +469,23 @@
 /* =============== 080224 start ================ */
 .offerPopupBox .titleSec {font-size: 20px;}
 .offerPopupBox .titleSec img{max-width: 65px;}
-.offerPopupBox p {font-size: 16px; line-height: 24px;}
+.offerPopupBox p {font-size: 15px; line-height: 24px;}
 .offerPopupBox p span.bigFont {font-size: 20px;}
 /* =============== 080224 start ================ */
+
+.planeBox_subBox .priceSec_Sub span {font-size: 18px;}
+
+.planeBox_subBox .offerPriceDIv {width: 70px; height: 70px; background-size: cover; left: -23px; top: -8px;}
+.planeBox_subBox .offerPriceDIv .percent {font-size: 14px; line-height: 15px;}
+
+.planeSec {margin-bottom: 0;}
+.planeSec_afterLog {padding-bottom: 0;}
 
 }
 
 
 @media only screen and (max-width:530px) {
-  .innerMain_wraper{padding-top: 135px; padding-bottom: 100px;}
+  .innerMain_wraper{padding-top: 150px; padding-bottom: 100px;}
   .profileView_Res{padding-top: 170px;}
   /* .innerMain_wraper_register{padding-top: 135px; padding-bottom: 115px;} */
 
@@ -486,7 +494,7 @@
   .profile_photo .avatar_title h3{font-size: 15px;}
   ul.res_upgrade_btn li button{padding: 2px 10px;}
   ul.res_upgrade_btn{margin-top: -2px;}
-  ul.res_upgrade_btn li:first-child {margin-right: 8px; font-size: 14px;}
+  ul.res_upgrade_btn li:first-child {margin-right: 8px; font-size: 15px;}
 
   .galleryPhoto .col-sm-3{-webkit-box-flex: 0; -ms-flex: 0 0 33%; flex: 0 0 33%; max-width: 33%;}
 
@@ -502,7 +510,7 @@
 
 
 .personal_sumary_right p a.verifyEmail {padding: 3px 4px;}
-.portfolio_details_block .title_sec h2 button {padding: 5px 12px; line-height: 14px; font-size: 13px;}
+.portfolio_details_block .title_sec h2 button {padding: 5px 6px; line-height: 14px; font-size: 15px;}
 
 
 }
@@ -511,8 +519,8 @@
 @media only screen and (max-width:400px) {
   .galleryPhoto .col-sm-3{-webkit-box-flex: 0; -ms-flex: 0 0 100%; flex: 0 0 100%; max-width: 100%;}
   .dataSec {font-size: 12px;}
-  .personal_sumary_right p {font-size: 13px;}
-  .personal_sumary_right p.mobile_verifi {font-size: 13px;}
+  .personal_sumary_right p {font-size: 15px;}
+  .personal_sumary_right p.mobile_verifi {font-size: 15px;}
 
 
   }
